matches/static/css/newcss.css
body {

    padding-top: 70px;
    background-color: white;
    color: black;
}
.navbar{
    border-radius:0;
    background-color: white;
    border-color: #dc322f;
}

.navbar-default .navbar-brand{
    font-family: 'Yesteryear',cursive;
    font-size: 30px;
    color:#dc322f;
}
.nav.navbar-nav.navbar-right li a span{
    color: #dc322f;
}
.nav.navbar-nav{
    margin-right:3em;
}

/*ObjectA Search Field*/
.form-control#search_obj1{
    border-bottom-left-radius: 20px;
    border-top-left-radius: 20px;
    border-bottom-right-radius: 0px;
    border-top-right-radius: 0px;

    border-right:none;
    border-top:none;
    border-bottom:none;
    border-color: #dc322f;
}
/*ObjectA Search Field*/
.form-control#search_obj2{
    border-bottom-left-radius: 0px;
    border-top-left-radius: 0px;
    border-bottom-right-radius: 0px;
    border-top-right-radius: 0px;
    border-right:none;
    border-top:none;
    border-bottom:none;
    border-left:none;
    border-color: #dc322f;

}
.form-control{
    background-color: white;
    color: #dc322f;
    text-align:center;
}
.no-border {
    box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
}
.form-control::placeholder{
    font-family:'Montserrat', sans-serif;
    color: #dc322f;
    opacity: 0.5;
}
.form-control:focus,form-control:active{
    box-shadow:none;
    outline:0px;
}
/*Navigator Search Button*/
.btn-default{
    background-image: url("../img/searchicon_red.png");
    background-repeat:no-repeat;
    background-size: 20px;
    background-position:center;
    background-color:white;
    border-left-width: 1px;
    height:2.4em;
    width:4em;
    border-bottom-left-radius: 0px;
    border-top-left-radius: 0px;
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
    border-left:none;
    border-top:none;
    border-bottom:none;
    border-color: #dc322f;
}
.btn-default:hover{
    background-color:white;
    background-image: url("../img/search_grey.png");
}
.logo{
    font-family: 'Yesteryear',cursive;
}
.nav.navbar-nav.navbar-right li a {
    color: #dc322f;
    fonta-family: 'Montserrat', sans-serif;
}
.nav.navbar-nav.navbar-right li a:hover{
    color: #7F8177;
}
/*index page*/
.container{
    font-family: 'Montserrat', sans-serif;
    line-height:2.5;
}
.container#index{
    font-size:170%;
}
.container#add{
    font-size:12px;
}
.largeText{
    font-size:150%;
}
.mediumText{
    font-size:120%;
}
.smallText{
    font-size:100%;
}
.addForm{
    line-height:2;
}
.bigText{
    font-size:2.5em;
}
.match_text{
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    padding-bottom:5em;
}
.sideBySide{
    font-family: 'Montserrat', sans-serif;
    display:flex;
    justify-content: space-evenly;
    margin-bottom:5em;
    position: center;
    padding-top:2.5em;
}
#firstOtherMatches{

    /*margin-left:20em;*/
}
#secondOtherMatches{

    overflow:hidden;
    padding-top:0;

}
/*Voting Section:*/
.cc-selector input{
    margin:0;padding:0;
    -webkit-appearance:none;
       -moz-appearance:none;
            appearance:none;
}
.no{
    font-family:'Anton',cursive;
    color:red;
    font-size:20px;
}
.yes{
    font-family:'Anton',cursive;
    color:green;
    font-size:20px;
}
.irrelevant{
    font-family:'Anton',cursive;
    color: orangered;
    font-size:20px;
}
.cc-selector input:active +.opinion{opacity: .9;}
.cc-selector input:checked +.opinion{
    -webkit-filter: none;
       -moz-filter: none;
            filter: none;
}
.opinion{
    cursor:pointer;
    background-size:contain;
    background-repeat:no-repeat;
    display:inline-block;
    width:100px;height:50px;
    -webkit-transition: all 100ms ease-in;
       -moz-transition: all 100ms ease-in;
            transition: all 100ms ease-in;
    -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
       -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
            filter: brightness(1.8) grayscale(1) opacity(.7);
}
.opinion:hover{
    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
       -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
            filter: brightness(1.2) grayscale(.5) opacity(.9);
}
.chart_container{
    height:300px;
    width:300px;
    display:inline-block;
    position:center;
}

.cont{
    width:150px;
    height:150px;
    display:inline-block;
    position:center;
    border-radius:50%;
    /*border:0.2em solid #7F8177;*/
}
.cont img{
    width:100%;
    height:auto;

}
.rowChartImage{
    width:55em;
    background-color:black;
    height:auto;
    margin:0 auto;
    display: -webkit-flex; /* Safari */
    -webkit-align-items: center; /* Safari 7.0+ */
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}
.redColor{
    color: #dc322f;
}
a{
    color: #dc322f;
}

